--- a/cardano-crypto-tests/cardano-crypto-tests.cabal
+++ b/cardano-crypto-tests/cardano-crypto-tests.cabal
@@ -101,6 +101,7 @@ test-suite test-crypto-vectors
     Test.EcdsaSecp256k1Tests
     Test.SchnorrSecp256k1Tests
     Util.Utils
+    Util.StringConstants
     TestVector.EcdsaSecp256k1Vectors
     TestVector.SchnorrSecp256k1Vectors
     TestVector.Vectors
