--- a/cardano-crypto-tests/cardano-crypto-tests.cabal
+++ b/cardano-crypto-tests/cardano-crypto-tests.cabal
@@ -57,6 +57,10 @@ library
                         Bench.Crypto.VRF
                         Bench.Crypto.KES
                         Bench.Crypto.BenchData
+                        Test.Crypto.Vector.Secp256k1DSIGN
+                        Test.Crypto.Vector.Vectors
+                        Test.Crypto.Vector.StringConstants
+                        Test.Crypto.Vector.VectorUtil
 
   build-depends:        base
                       , bytestring
@@ -75,6 +79,9 @@ library
                       , tasty-hunit
                       , tasty-quickcheck
                       , criterion
+                      , text
+                      , utf8-string
+                      , base16-bytestring
 
   if flag(secp256k1-support)
     cpp-options: -DSECP256K1_ENABLED
@@ -91,31 +98,6 @@ test-suite test-crypto
                       , tasty-quickcheck
 
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
-
-test-suite test-crypto-vectors
-  import:               base, project-config
-  type:                 exitcode-stdio-1.0
-  hs-source-dirs:       vector-tests
-  main-is:              Main.hs
-  other-modules:
-    Util.Utils
-    Util.StringConstants
-    TestVector.EcdsaSecp256k1Vectors
-    TestVector.SchnorrSecp256k1Vectors
-    TestVector.Vectors
-  build-depends:        base
-                      , bytestring
-                      , text
-                      , utf8-string
-                      , base16-bytestring
-                      , cardano-binary
-                      , cborg
-                      , tasty
-                      , tasty-hunit
-                      , cardano-crypto-class
-                                   
-  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
-
 
 benchmark bench-crypto
   import:               base, project-config
